# invenio-stats-dashboard

./: .buildinfo  .eslintrc.cjs  .gitignore  .gitmodules  AGENTS.md  CACHING.md  CHANGES.md  PROACTIVE_CACHING_IMPLEMENTATION_PLAN.md  README.html  README.md  api.html  api_requests.html  apply_patches.sh  architecture.html  changelog.html  cli.html  configuration.html  genindex.html  index.html  introduction.html  jest.config.js  jest.setup.js  jsconfig.json  known_issues.html  objects.inv  overview.html  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  reference.html  run-js-tests.sh  run-tests.sh  search.html  searchindex.js  setup.html  setup.py  todos.html  usage.html
.doctrees/: README.doctree  api.doctree  api_requests.doctree  architecture.doctree  changelog.doctree  cli.doctree  configuration.doctree  environment.pickle  index.doctree  introduction.doctree  known_issues.doctree  overview.doctree  reference.doctree  setup.doctree  todos.doctree  usage.doctree
.github/workflows/: documentation.yml  tests.yml
_sources/: README.md.txt  api.md.txt  api_requests.md.txt  architecture.md.txt  changelog.md.txt  cli.md.txt  configuration.md.txt  index.md.txt  introduction.md.txt  known_issues.md.txt  overview.md.txt  reference.md.txt  setup.md.txt  todos.md.txt  usage.md.txt
_static/: documentation_options.js
docs/: README-diagrams.md  README.md  cache_configuration.md  configurable_enrichment.md  event-reindexing-flow.mmd  event-reindexing-sequence.mmd  health-checks-failure-handling.mmd  pattern_detection_ideas.md  process-management.md
docs/source/: README.md  architecture.md  cli.md  conf.py  configuration.md  index.md  introduction.md  known_issues.md  overview.md  reference.md  setup.md  todos.md  usage.md
examples/: enrichment_config_examples.py  process-management-demo.py
invenio_stats_dashboard/: __init__.py  aggregations.py  cli.py  components.py  config.py  constants.py  event_builders.py  exceptions.py  ext.py  menus.py  permissions.py  processors.py  proxies.py  queries.py  service.py  tasks.py  usage_transformers.py  utils.py  version.py  webpack.py
invenio_stats_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
invenio_stats_dashboard/aggregations/: __init__.py  base.py  bookmarks.py  records_delta_aggs.py  records_snapshot_aggs.py  types.py  usage_delta_aggs.py  usage_snapshot_aggs.py
invenio_stats_dashboard/cli/: __init__.py  cache_cli.py  community_events_cli.py  core_cli.py  destroy_indices_cli.py  processes_cli.py  usage_events_cli.py
invenio_stats_dashboard/config/: __init__.py  component_metrics.py  config.py
invenio_stats_dashboard/custom_fields/: community_events_field.py
invenio_stats_dashboard/docs/: OVERLAPPING_RUNS.md  README_RESILIENCE.md  configuration.md  cursor_improve_search_query_efficiency.md  index_migration_strategy.md  migration_example.py  monthly_index_migration.md  performance_analysis_usage_aggregator.md
invenio_stats_dashboard/models/: __init__.py  cached_response.py
invenio_stats_dashboard/resources/: __init__.py  api_queries.py  cache_utils.py  content_negotiation.py  data_series_queries.py  data_series_serializers.py  serializers.py
invenio_stats_dashboard/resources/schemas/: data_series.xsd
invenio_stats_dashboard/resources/serializers/: __init__.py  basic_serializers.py  data_series_serializers.py  (+1 more)
invenio_stats_dashboard/search_indices/: event_builders.py
invenio_stats_dashboard/services/: __init__.py  cached_response_service.py  community_dashboards.py  community_events.py  service.py  types.py  usage_reindexing.py
invenio_stats_dashboard/tasks/: __init__.py  aggregation_tasks.py  cache_tasks.py  usage_reindexing_tasks.py
invenio_stats_dashboard/templates/: stats_dashboard.html
invenio_stats_dashboard/transformers/: __init__.py  base.py  record_delta.py  record_deltas.py  record_snapshot.py  record_snapshots.py  types.py  usage_delta.py  usage_deltas.py  usage_snapshot.py  usage_snapshots.py
invenio_stats_dashboard/utils/: __init__.py  decorators.py  process_manager.py  usage_events.py  utils.py
invenio_stats_dashboard/views/: __init__.py  views.py
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_aggregators.py  test_api_requests.py  test_cache_functionality.py  test_community_events.py  test_compression_serializers.py  test_content_negotiation.py  test_custom_fields.py  test_dashboard_integration.py  test_data_series_csv_serializer.py  test_data_series_excel_serializer.py  test_data_series_xml_serializer.py  test_enhanced_xml_serializer.py  test_event_builders.py  test_memory_estimator.py  test_queries.py  test_serializers.py  test_service.py  test_service_components.py  test_service_generate_community_events.py  test_stats_dashboard.py  test_transformers.py  test_usage_event_generator.py  test_usage_reindexing_service.py  test_view_logic.py
tests/cli/: __init__.py  test_cli_enable_dashboards.py  test_stats_dashboard_cli.py
tests/fixtures/: caching.py  communities.py  custom_fields.py  files.py  fixtures.py  frontend.py  identifiers.py  records.py  roles.py  stats.py  users.py
tests/helpers/: __init__.py  fake_datacite_client.py  files_helper.py  sample_stats_test_data.py  types.py  utils.py
tests/pytest_plugins/: pytest_live_status.py
tests/ui/: __init__.py  test_dashboard_integration.py  test_dashboard_templates.py  test_dashboard_views.py
tests_stats_dashboard/: conftest.py
tests_stats_dashboard/api/: test_aggregators.py  test_api_requests.py  test_compression_serializers.py  test_data_series_csv_serializer.py  test_data_series_xml_serializer.py  test_enhanced_xml_serializer.py  test_queries.py  test_serializers.py  test_service_components.py  test_usage_event_generator.py  test_usage_reindexing_service.py
tests_stats_dashboard/cli/: test_stats_dashboard_cli.py
tests_stats_dashboard/fixtures/: __init__.py  files.py  mail.py  records.py  users.py
tests_stats_dashboard/helpers/: fake_datacite_client.py  files_helper.py
tests_stats_dashboard/test_logs/: invenio.log.1  invenio.log.3
(+429 files in other folders)
