[build-system]
build-backend = "setuptools.build_meta"
requires = ["babel>2.8", "setuptools>=61", "wheel"]

[project]
name = "invenio-stats-dashboard"
version = "0.1.0-alpha1"
description = "Invenio Stats Dashboard"
readme = "README.md"
keywords = ["dashboard", "invenio", "stats"]
license = { text = "MIT" }
authors = [{ name = "MESH Research", email = "info@meshresearch.net" }]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "arrow>=1.3",
  "brotli>=1",
  "flask-sqlalchemy",
  "glom>=23",
  "halo>=0.0.31",
  "openpyxl>=3.1",
  "orjson>=3.11.3",
  "psutil>=6",
  "pydantic>=2.11.7",
  "tqdm>=4.66",
]

optional-dependencies.dev = ["black>=25.1", "mypy>=1.8", "ruff>=0.3"]
optional-dependencies.docs = [
  "furo>=2023",
  "linkify-it-py>=0.2",
  "myst-parser>=2",
  "sphinx>=7",
  "sphinx-copybutton>=0.5",
  "sphinx-design>=0.3",
  "uc-micro-py>=1",
]
optional-dependencies.tests = [
  "arrow",
  "docker-services-cli",
  "invenio-app-rdm[opensearch2]~=13.0.0",
  "invenio-cli",
  "pytest-black>=0.6",
  "pytest-cov>=6.2.1",
  "pytest-invenio>=3.3,<4",
  "pytest-isort>=4",
  "pytest-mock",
  "pytest-mypy>=0.10",
  "pytest-ruff>=0.1",
  "requests-mock",
]
urls.Homepage = "https://github.com/MESH-Research/invenio-stats-dashboard"
scripts.community-stats = "invenio_stats_dashboard.cli:cli"
[project.entry-points]
"invenio_base.api_apps".invenio_stats_dashboard = "invenio_stats_dashboard.ext:InvenioStatsDashboard"
"flask.commands".community-stats = "invenio_stats_dashboard.cli:cli"
"invenio_base.blueprints".invenio_stats_dashboard = "invenio_stats_dashboard.views.views:create_blueprint"
"invenio_assets.webpack".invenio_stats_dashboard_theme = "invenio_stats_dashboard.webpack:theme"
"invenio_base.finalize_app".invenio_stats_dashboard = "invenio_stats_dashboard.ext:finalize_app"
"invenio_base.api_blueprints".invenio_stats_dashboard = "invenio_stats_dashboard.views.views:create_api_blueprint"
"invenio_base.apps".invenio_stats_dashboard = "invenio_stats_dashboard.ext:InvenioStatsDashboard"
"invenio_celery.tasks".invenio_stats_dashboard = "invenio_stats_dashboard.tasks.aggregation_tasks"
"invenio_celery.tasks".invenio_stats_dashboard_caching = "invenio_stats_dashboard.tasks.cache_tasks"
"invenio_celery.tasks".invenio_stats_dashboard_reindexing = "invenio_stats_dashboard.tasks.usage_reindexing_tasks"

# invenio-rdm-records = {path = "../invenio-rdm-records", editable = true}
# invenio-requests = {path = "../invenio-requests", editable = true}

[tool.setuptools]
packages = ["invenio_stats_dashboard"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*"]

[tool.uv.sources]

[tool.ruff]
target-version = "py312"

line-length = 88
# temporarily removed C for complexity checks
lint.select = ["B", "D", "DOC", "E", "F", "I", "UP"]
# Now Ruff handles formatting, so enable formatting rules
lint.ignore = [
  # Keep some warnings disabled
  "W1", # Indentation warnings
  "W2", # Whitespace warnings
  "W3", # Blank line warnings
]
lint.per-file-ignores."__init__.py" = ["D104", "E402", "F401"]
lint.per-file-ignores."tests/helpers/sample_stats_data/sample_usage_query_responses.py" = [
  "E501",
]
# Ensure consistent import sorting - explicitly declare tests as first-party
lint.isort.known-first-party = ["invenio_stats_dashboard", "tests"]
lint.pydocstyle.convention = "google"
lint.preview = true

[tool.isort]
profile = "black"
line_length = 88
verbose = true
multi_line_output = 3 # Vertical hanging indent
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
skip = [
  "__pycache__", # Skip cache directories
]

[tool.pytest.ini_options]
addopts = """
--ruff --doctest-modules
--log-cli-level=DEBUG
--ignore=docs
--ignore=node_modules
--ignore=invenio_stats_dashboard/patches
--cov=invenio_stats_dashboard --cov-report=term-missing
"""
norecursedirs = []
log_cli_level = "DEBUG"
isort_show_files = true
plugins = [
  "tests.fixtures.files",
  "tests.fixtures.mail",
  "tests.fixtures.communities",
  "tests.fixtures.custom_fields",
  "tests.fixtures.records",
  "tests.fixtures.roles",
  "tests.fixtures.stats",
  "tests.fixtures.users",
  "tests.fixtures.vocabularies.affiliations",
  "tests.fixtures.vocabularies.community_types",
  "tests.fixtures.vocabularies.date_types",
  "tests.fixtures.vocabularies.descriptions",
  "tests.fixtures.vocabularies.funding_and_awards",
  "tests.fixtures.vocabularies.languages",
  "tests.fixtures.vocabularies.licenses",
  "tests.fixtures.vocabularies.resource_types",
  "tests.fixtures.vocabularies.roles",
  "tests.fixtures.vocabularies.subjects",
  "tests.fixtures.vocabularies.title_types",
  "tests.pytest_plugins.pytest_live_status",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = false
ignore_missing_imports = true
follow_imports = "skip"
allow_untyped_globals = true
exclude = [
  '^tests/',
  '^invenio_stats_dashboard/search_indices/search_templates/.*/os-v2/',
  '^invenio_stats_dashboard/patches/',
]

[[tool.mypy.overrides]]
module = "invenio_stats_dashboard.search_indices.search_templates.*"
ignore_errors = true
ignore_missing_imports = true
follow_imports = "skip"
